<resources>
    <string name="app_name">MyBestMarketApp</string>
    <string name="main_logo_description">Main Logo</string>
    <string name="back_button_content">bouton de retour</string>
    <string name="header_account_button_description">account button</string>
    <string name="main_cardButton_textView">Carte</string>
    <string name="main_OffresButton_textView">Offres</string>
    <string name="main_magasinsButton_textView">Magasins</string>
    <string name="cr_ation_de_compte">Création de compte</string>
    <string name="qr_code_text_button_login">QR code</string>
    <string name="button_go_to_form">remplir le formulaire manuellement</string>
    <string name="create_account_btn">Créer</string>
    <string name="pr_nom_input_hint">Prénom</string>
    <string name="nom_input_hint">Nom</string>
    <string name="email_input_hint">Email</string>
    <string name="address_input_hint">Address</string>
    <string name="code_postal_input_hint">Code Postal</string>
    <string name="ville_input_hint">Ville</string>
    <string name="carte_de_fid_lit_input_hint">Carte de fidélité</string>
    <string name="product_picture">ProductPicture</string>
    <string name="product_name_textView">product name</string>
    <string name="description_product_textView">Description :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nom_prenom_carte_fragment">Nom Prenom</string>
    <string name="header_details_title">TITLE</string>
    <string name="account_title">Compte</string>
    <string name="update_button">J\'enregistre les modifications</string>
    <string name="my_best_market_title">My Best Market</string>
    <string name="image_du_store_description">Image du store</string>
</resources>