<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:id="@+id/layout_product_linearLayout">

    <ImageView
        android:id="@+id/layout_product_ImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/product_picture" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/layout_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/product_name_textView" />

        <TextView
            android:id="@+id/layout_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:maxLines="2"
            android:hint="@string/description_product_textView" />

    </LinearLayout>

</LinearLayout>