<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/fragmentContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/carteBtn"
            style="@style/textViewTab"
            android:background="@color/teal_200"
            android:text="@string/main_cardButton_textView"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/offresBtn"
            style="@style/textViewTab"
            android:background="@color/teal_500"
            android:text="@string/main_OffresButton_textView"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/magasinsBtn"
            style="@style/textViewTab"
            android:background="@color/teal_700"
            android:text="@string/main_magasinsButton_textView"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</LinearLayout>